tests/files/parser_tests/should_fail/020.cmdr
//Should not parse due to unterminated index
x = a1];
